--- a/app/src/main/res/layout/activity_adjust_resize.xml
+++ b/app/src/main/res/layout/activity_adjust_resize.xml
@@ -12,7 +12,13 @@
         android:text="Hello World!" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/show"
+        android:id="@+id/show1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/show2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp" />
