--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#2196F3</color>
-    <color name="purple_500">#2196F3</color>
-    <color name="purple_700">#2196F3</color>
+    <color name="purple_200">#0000FF</color>
+    <color name="purple_500">#0000FF</color>
+    <color name="purple_700">#0000FF</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
